# obrain

./: Cargo.toml  README.md
.cargo/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
crates/bindings/go/: .gitignore
crates/bindings/python/: Cargo.toml
crates/bindings/python/src/: database.rs
crates/bindings/python/tests/: requirements.txt
crates/bindings/python/tests/lpg/cypher/: test_mutations.py  test_regression_cypher.py
crates/bindings/python/tests/lpg/gql/: test_mutations.py  test_regression_external.py
crates/bindings/wasm/: Cargo.toml
crates/neo4j2obrain/: Cargo.toml
crates/neo4j2obrain/src/: cognitive_init.rs  embedder.rs  main.rs  pipeline.rs  sentence_transformer.rs
crates/obrain-cli/: Cargo.toml
crates/obrain-common/src/: mvcc.rs
crates/obrain-core/: Cargo.toml
crates/obrain-core/src/: subscription.rs
crates/obrain-engine/: Cargo.toml
crates/obrain-engine/examples/: verify_bases.rs
crates/obrain-engine/src/: cdc.rs  cognitive_procedures.rs  config.rs
crates/obrain-engine/tests/: coverage_rebrand.rs  database_api.rs  factorized_aggregation_test.rs  gds_integration_e2e.rs  gql_order_by_limit.rs  megalaw_bench.rs  po_decision_probe.rs  po_properties_zones_audit.rs  po_property_filter_repro.rs  search_wikipedia_constellation.rs  substrate_cross_restart.rs  t17i_ram_bench.rs  t17i_upgrade_then_measure.rs  t17j_chain_audit.rs  t17j_create_edge_profile.rs  t17k_cypher_where_synthetic.rs  (+9 more)
crates/obrain-migrate/: Cargo.toml
docs/: requirements.txt
docs/contributing/: pull-requests.md
docs/hooks/: copy_markdown.py
docs/includes/: abbreviations.md
examples/rust/: algorithms.rs  migrate_v2.rs  persistence.rs
scripts/: copy_docs_md.py  export-public.sh
(+73 files in other folders)
